tests/parse_print/parsing01/stderr.expected
Error:
    Parser error in file: tests/parse_print/parsing01/parsing01.essence Error is:
ValidatorError tests/parse_print/parsing01/parsing01.essence:4:1:
  |
4 | <empty line>
  | ^
Missing )
